--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ a {
     color: #E5E7EB;
 }
 
+a:hover {
+    cursor: pointer;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
 .main-text h1 {
     margin: 0;
     color: #F9FAF8;
